# Open-PDF-Files-from-your-Kivy-App

./: .gitignore  AndroidManifest.tmpl.xml  README.md  android_11_or_higher.txt  buildozer.spec  main.py  permission.py  pyproject.toml  storage.py
